<resources>
    <string name="app_name">HomeFoodDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">HomeFood</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="retry">Retry</string>
    <string name="continue_text">Continue</string>

    <!-- Page Title -->
    <string name="title_food_category">Food Category</string>
    <string name="title_food_main_page">Main Course Food</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_login">Login</string>
    <string name="title_sub_food_category">Sub Course Food</string>
    <string name="title_delivery">Delivery</string>
    <string name="title_total_order">Total Orders</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_my_order">My Order</string>
    <string name="title_my_fav_food">My Favourite Foods</string>
    <string name="title_about_us">About us</string>


    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">@android:string/ok</string>
    <string name="text_cancel">@android:string/cancel</string>

    <string name="text_name">Name</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_mobile">Mobile</string>
    <string name="text_email">E-Mail</string>
    <string name="text_continue">Continue</string>
    <string name="text_door_street"><![CDATA[Door No & Street]]></string>
    <string name="text_area_city"><![CDATA[Area & City]]></string>
    <string name="text_state">State</string>
    <string name="text_pinCode">Pincode</string>
    <string name="text_create_account">Create Account</string>
    <string name="country">Country : India</string>
    <string name="text_permanent">Permanent</string>
    <string name="text_temporary">Temporary</string>
    <string name="text_login">Login</string>
    <string name="text_signup_account">Don\'t have account ?</string>
    <string name="text_sign_up_info">Already have an Account ?</string>
    <string name="text_check_food">Check Food</string>
    <string name="contact_us">Contact Us</string>
    <string name="text_location_not_avail_info">1. Do not list your favourite location ?\n
    2. Having trouble in making order ?\n
    3. Having issues with delivery ?
    </string>
    <string name="dial">Dial</string>
    <string name="message">Message</string>
    <string name="order_more">Order More</string>
    <string name="text_place_order">Place Order</string>
    <string name="text_skip">Skip</string>
    <string name="text_order">Order %1$s</string>
    <string name="text_chennai_tamilnadu_india">Chennai, Tamilnadu, India</string>
    <string name="text_zipcode">Zipcode</string>
    <string name="text_city">City</string>
    <string name="text_door_no_street_name">Door no / Street name</string>
    <string name="text_confirm_address">Confirm Address:</string>
    <string name="text_pick_delivery_time">Pick Delivery Time</string>
    <string name="price_display">Rs. %1$s</string>
    <string name="empty_string">%1$d</string>
    <string name="text_add_address">Add New Address</string>
    <string name="text_add_or_update_address">Add / Update</string>
    <string name="text_zero">0</string>
    <string name="text_add">ADD</string>
    <string name="text_no_main_food">No food available in selected category.\nTry Another</string>
    <string name="text_no_sub_food">No related food available for now.\nTry Another</string>
    <string name="text_go_back">Go Back</string>
    <string name="text_free">Free</string>
    <string name="text_order_date">Order Date</string>
    <string name="text_delivery_time">Delivery Time</string>
    <string name="text_total_amount">Total Amount</string>
    <string name="text_order_status">Order Status</string>
    <string name="text_food">Food</string>
    <string name="text_price">Price</string>
    <string name="text_qty">Qty</string>
    <string name="text_total">Total</string>
    <string name="text_total_offer">Total Offer</string>
    <string name="text_final_price">Final Price</string>

    // Messages
    <string name="not_login_message">You are not Logged In.</string>
    <string name="sub_food_selection_done_message">If you finished purchasing press \"Yes\". To continue purchase press "No\".</string>
    <string name="sub_food_order_done_message">Your order is placed successfully. Few more steps to confirm again!</string>
    <string name="free_sub_food_extra_selection_message">You are supposed to select max 1 free food per Main course. You are charged for extra selection of free food.\n\nTo avoid charges press \"Cancel\" and change free food option or quantity.</string>
    <string name="know_about_us">Know about us</string>
</resources>
