<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_padding"
    android:layout_marginEnd="@dimen/default_padding"
    android:layout_marginLeft="@dimen/default_padding"
    android:layout_marginRight="@dimen/default_padding"
    android:layout_marginStart="@dimen/default_padding">

    <RelativeLayout
        android:id="@+id/parent_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_order_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            tools:text="Title of the Order" />

        <LinearLayout
            android:id="@+id/order_date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_order_title"
            android:paddingBottom="@dimen/small_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding">

            <TextView
                android:id="@+id/tv_order_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/text_order_date" />

            <TextView
                android:id="@+id/tv_order_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                tools:text="14-11-018" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delivery_date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_date_container"
            android:paddingBottom="@dimen/small_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding">

            <TextView
                android:id="@+id/tv_delivery_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/text_delivery_time" />

            <TextView
                android:id="@+id/tv_delivery_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                tools:text="14-11-018 1 : 00" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/total_amount_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delivery_date_container"
            android:paddingEnd="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding">

            <TextView
                android:id="@+id/tv_total_amount_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/text_total_amount" />

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                tools:text="900" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_amount_container">
            <TextView
                android:id="@+id/tv_order_status_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="0dp"
                android:paddingStart="@dimen/default_padding"
                android:layout_weight="4"
                android:paddingBottom="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/text_order_status" />

            <TextView
                android:id="@+id/tv_order_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:paddingBottom="@dimen/small_padding"
                android:paddingEnd="@dimen/default_padding"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:paddingTop="@dimen/small_padding"
                tools:text="Order Accepted" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>